samples/_failures_safe/1761318188_ca0dac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_822f66b4.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_822f66b4.c:167:45: error: missing terminating " character
  167 |         "IDENTIFIER", "NUMBER", "OPERATOR", "
      |                                             ^
./samples/SAFE/__tmp_822f66b4.c:167:9: error: expected expression at end of input
  167 |         "IDENTIFIER", "NUMBER", "OPERATOR", "
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_822f66b4.c:167:9: error: expected declaration or statement at end of input
